--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
   "author": "Albert Oclarit, John Paul Aying, Knarfy Elopre",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.4.5",
+    "axios": "^0.14.0",
+    "babel-import-root": "git+https://github.com/albertoclarit/babel-import-root.git",
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.2",
     "font-awesome": "^4.6.3",
@@ -49,9 +50,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
-    "validatorjs": "^3.6.0",
-    "when": "^3.7.7",
-    "babel-import-root": "git+https://github.com/albertoclarit/babel-import-root.git"
+    "validatorjs": "^3.6.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.4.0",
