--- a/build.gradle
+++ b/build.gradle
@@ -129,7 +129,7 @@ dependencies {
     compile group: 'com.querydsl', name: 'querydsl-core', version: '4.1.3'
     querydslapt group: 'com.querydsl', name: 'querydsl-apt', version: '4.1.3'
 
-
+    compile group: 'com.hynnet', name: 'jacob', version: '1.18'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
