--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@sketchpixy/rubix": "^2.9.8",
     "axios": "^0.14.0",
     "babel-import-root": "git+https://github.com/albertoclarit/babel-import-root.git",
+    "bluebird": "^3.4.6",
     "classnames": "^2.2.5",
     "cookies-js": "^1.2.2",
     "font-awesome": "^4.6.3",
