--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,84 +4,149 @@
   "description": "HIS D3 DTR_Payroll",
   "main": "index.js",
   "scripts": {
+    "dll": "node_modules/webpack/bin/webpack.js --config=webpack.dll.js",
     "start": "node server.js --env=dev",
+    "stats": "webpack --profile --json > stats.json",
     "serve": "node server.js --env=dev",
     "serve:dist": "node server.js --env=dist",
-    "dist": "npm run clean & npm run copy & webpack --env=dist",
-    "copy": "copyfiles -f ./src/index.html ./src/favicon.ico ./dist",
+    "dist": "npm run clean & npm run copy  & node --max_old_space_size=4096 node_modules/webpack/bin/webpack.js --env=dist",
+    "distpub": "npm run cleanpublic",
+    "copy": "copyfiles -f ./src/index.html ./src/favicon.ico  ./dist",
+    "copydll": "copyfiles -f ./dll/dll.vendor.js   ./dist/dll",
     "clean": "rimraf ./dist/*",
+    "cleanpublic": "rimraf ../src/main/resources/public/* & git commit file:../src/main/resources/public -m \"commit delete operation for public\" ",
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
-    "release:patch": "npm version patch && npm publish && git push --follow-tags",
-    "sass": "node-sass --include-path ./node_modules --include-path ./src/public src/sass/main.scss src/styles/css/main.css"
+    "release:patch": "npm version patch && npm publish && git push --follow-tags"
   },
-  "author": "Albert Oclarit, John Paul Aying, Knarfy Elopre",
+  "author": "Albert Oclarit, John Paul Aying, Knarfy Eloprcd e,Gregg Ian Bayocboc, Ace Lumaad, Reden Zarra",
   "license": "ISC",
   "dependencies": {
     "@sketchpixy/rubix": "^2.9.8",
+    "antd": "^3.1.6",
     "axios": "^0.14.0",
     "babel-import-root": "git+https://github.com/albertoclarit/babel-import-root.git",
+    "babel-polyfill": "^6.13.0",
     "bluebird": "^3.4.6",
     "classnames": "^2.2.5",
+    "conventional-redux": "git+https://github.com/albertoclarit/conventional-redux.git",
     "cookies-js": "^1.2.2",
+    "draft-js": "^0.10.4",
+    "draftjs-to-html": "^0.7.4",
+    "fixed-data-table-2": "^0.8.6",
     "font-awesome": "^4.6.3",
+    "halogen": "^0.2.0",
     "history": "^3.0.0",
+    "hover.css": "^2.0.2",
+    "html-to-draftjs": "0.1.0-beta14",
+    "jquery": "^3.1.0",
+    "load-script": "^1.0.0",
     "lodash": "^4.17.4",
-    "moment": "^2.15.0",
-    "node-sass": "^3.9.0",
-    "node-uuid": "^1.4.7",
+    "mathjs": "^3.16.5",
+    "moment": "^2.19.2",
+    "moment-duration-format": "^1.3.0",
+    "number-to-words": "^1.2.3",
+    "numeral": "^2.0.4",
     "object-assign": "^4.1.0",
-    "react": "^15.3.1",
-    "react-addons-css-transition-group": "^15.3.1",
-    "react-addons-linked-state-mixin": "^15.3.1",
-    "react-addons-pure-render-mixin": "^15.3.1",
-    "react-addons-update": "^15.3.1",
-    "react-bootstrap": "^0.30.3",
-    "react-dom": "^15.3.1",
-    "react-dropzone": "^3.5.3",
+    "postal": "^2.0.4",
+    "random-password": "^0.1.2",
+    "rc-progress": "^2.2.4",
+    "rc-slider": "^8.4.0",
+    "rc-time-picker": "^2.4.1",
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "15.4.2",
+    "react-addons-linked-state-mixin": "15.4.2",
+    "react-addons-pure-render-mixin": "15.4.2",
+    "react-addons-shallow-compare": "15.4.2",
+    "react-addons-test-utils": "15.4.2",
+    "react-addons-update": "15.4.2",
+    "react-autosuggest": "^6.0.4",
+    "react-big-calendar": "^0.17.0",
+    "react-bootstrap": "^0.31.5",
+    "react-bootstrap-table": "^4.1.4",
+    "react-circular-progressbar": "^0.1.3",
+    "react-datepicker": "0.40.0",
+    "react-datetime": "^2.11.0",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
+    "react-dnd-scrollzone": "^4.0.0",
+    "react-dom": "^15.4.2",
+    "react-draft-wysiwyg": "^1.10.5",
+    "react-draggable": "^2.2.2",
+    "react-dropzone": "^3.7.3",
+    "react-ellipsis-text": "^1.0.0",
     "react-google-recaptcha": "^0.5.4",
-    "react-list": "^0.8.0",
+    "react-highlight-words": "^0.10.0",
+    "react-highlighter": "^0.4.2",
+    "react-list": "^0.8.4",
     "react-loader": "^2.4.0",
-    "react-notification-system": "^0.2.10",
-    "react-progress-2": "^4.3.0",
+    "react-notification-system": "^0.2.16",
+    "react-number-format": "^1.1.2",
+    "react-progress-2": "^4.4.2",
+    "react-qr-reader": "^1.1.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.5",
-    "react-select": "^1.0.0-beta14",
+    "react-scrollbar-js": "^1.0.1",
+    "react-scrollspy": "^2.4.1",
+    "react-select": "^1.0.0-rc.3",
+    "react-signature-pad": "git+https://github.com/kn4rfy/react-signature-pad.git",
+    "react-sound": "^0.5.2",
+    "react-stepzilla": "^4.6.3",
+    "react-tagsinput": "^3.19.0",
+    "react-textarea-autosize": "^4.0.5",
+    "react-toggle-button": "^2.1.0",
     "react-ux-password-field": "^0.9.12",
     "react-validation-mixin": "^5.4.0",
     "react-validatorjs-strategy": "^0.1.10",
+    "react-virtualized": "^9.12.0",
+    "react-webcam": "0.0.14",
+    "react-widgets": "^3.4.4",
+    "react-x-editable": "0.0.9-beta",
+    "recharts": "^0.22.4",
     "redux": "^3.5.2",
+    "redux-actions": "^2.2.1",
     "redux-logger": "^2.6.1",
+    "redux-promise-middleware": "^4.4.2",
+    "redux-saga": "^0.16.0",
+    "redux-saga-kit": "^1.1.0",
     "redux-thunk": "^2.1.0",
-    "validatorjs": "^3.6.0"
+    "smartadmin-plugins": "^1.0.20",
+    "smoothie": "^1.33.0",
+    "uuid": "^3.0.1",
+    "validatorjs": "^3.7.0"
   },
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.2",
     "assets-webpack-plugin": "^3.4.0",
-    "babel-core": "^6.14.0",
+    "auto-import-preloader": "^0.1.1",
+    "babel-core": "^6.25.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
+    "babel-plugin-import": "^1.6.2",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "bootstrap-less": "^3.3.8",
     "copyfiles": "^1.0.0",
     "css-loader": "^0.24.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "happypack": "^4.0.0",
+    "hard-source-webpack-plugin": "^0.5.13",
     "html-webpack-plugin": "^2.22.0",
-    "less": "^2.7.1",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.3",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
-    "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "react-hot-loader": "^1.3.0",
-    "riek": "^1.0.3",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
     "shelljs": "^0.7.4",
     "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.15.1"
   }
 }
