--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,6 +1,10 @@
 {
   "plugins": [
-       "babel-import-root"
-    ],
-   "presets": ["react","es2015","stage-0"]
+    "babel-import-root",
+    ["import", {
+      "libraryName": "antd",
+      "style": false
+    }]
+  ],
+  "presets": ["react","env","stage-0"]
 }
